# mi-projecto-django

./: db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py  profile_edit.html  signals.py  urls.py  views.py
accounts/managment/comands/: create_profiles.py
accounts/migrations/: 0001_initial.py
blog/: forms.py  models.py  urls.py  views.py
blog/management/commands/: setup_groups.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_form.html  article_list.html
config/: settings.py  urls.py
templates/: 403.html  base.html  login.html  profile.html  register.html
templates/registration/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt
tienda/: apps.py  models.py  signals.py  views.py
tienda/migrations/: 0001_initial.py  0002_tag_product_tags.py
users/: apps.py  views.py
